<resources>
    <string name="app_name">Piglists</string>
    <string name="title_activity_song">SongActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="side_nav_bar_connected">Currently connected to stereo</string>
    <string name="side_nav_bar_disconnected">Not currently connected to stereo</string>

    <string name="action_settings">Settings</string>
    <string name="hint">Search</string>
    <string name="newEvent">New Event</string>
    <string name="connect">Connect to stereo</string>
    <string name="disconnect">Disconnect from stereo</string>
    <string name="joinEvent">Join Event</string>
    <string name="manageGuests">Manage Guests</string>
    <string name="myPlaylists">My Playlists</string>
    <string name="sharPlaylist">Share a Playlist</string>
    <string name="newPlaylist">New Playlist</string>

    <string name="connectingDialog">Connecting...</string>
    <string name="connectingDialogCancel">Cancel</string>
    <string name="connectingDialogConfirm">You\'ve successfully connected.</string>

    <string name="disconnectingDialog">You\'ve been disconnected.</string>
    <string name="ok">Ok</string>
    <string name="kickOut">Kick Out</string>
    <string name="music">music</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="joiningDialog">Waiting for host permission</string>
    <string name="unJoin">Leave Event</string>
    <string name="side_nav_bar_joined">You are connected to an event!</string>
    <string name="joinedDialogConfirm">You have joined an event. Enjoy!</string>
    <string name="selectPlaylist">Select a playlist for your event</string>
    <string name="requestSong">Request Song</string>
    <string name="addme">Add me!</string>
</resources>
