<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    android:layout_marginBottom="@dimen/text_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/imgIcon"
            android:src="@drawable/music_icon"
            android:contentDescription="@string/music"
            android:layout_gravity="left" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.13"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtSongName"
                android:textSize="16dp"
                android:textColor="#000000"
                android:layout_gravity="top" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtSongAuthor"
                android:textSize="16dp"
                android:textColor="#505050"
                android:layout_gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="10dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="28dp"
                android:layout_height="24dp"
                android:text="@string/plus"
                android:id="@+id/btnVoteUp"
                android:background="#00ffffff"
                android:layout_gravity="center|right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/txtVote"
                android:layout_gravity="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="28dp"
                android:layout_height="26dp"
                android:text="@string/minus"
                android:id="@+id/btnVoteDown"
                android:background="#00ffffff"
                android:layout_gravity="center|right" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:id="@+id/sep"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin" />
</LinearLayout>
